<resources>
    <string name="app_name">MyNiceStart</string>
    <string name="username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_email">Correro Electrónico</string>
    <string name="registro">¿No estás registrado? Pulsa aquí</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="registrar">Regístrate</string>
    <string name="inicio_sesion">¿Ya tienes una cuenta? \nInicia sesión aquí</string>
    <string name="ok">OK</string>
    <string name="pantalla_carga">My Nice Start</string>
    <string name="toast1">Debes introducir el nombre y la contraseña para continuar</string>
    <string name="tvNombre">Nombre usuario: Usuario</string>
    <string name="tvContraseña">Contraseña: Contraseña</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="tv_expandible1">Susan Andrews</string>
    <string name="tv_expandible2">Work as a Freelancer</string>
    <string name="tv_alertD">Cuidao Con la Casca</string>
    <string name="app_bar_menu_bookmark">Bookmark</string>
    <string name="app_bar_menu_share">Share</string>
    <string name="app_bar_menu_search">Shearch</string>
</resources>