<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim" />

    <ImageView
        android:id="@+id/fotoPerfil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        />

    <TextView
        android:id="@+id/tvNombre"
        style="@style/TipoLetra1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/fotoPerfil"
        android:text="@string/tvNombre"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/tvContraseña"
        style="@style/TipoLetra1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre"
        android:text="@string/tvContraseña"
        android:layout_marginTop="@dimen/marginTop"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonMain5"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="cambiarventana2"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/ButtonOutlined">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>