<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/color_boton">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/girl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitStart"/>
        <!-- La propiedad fitstart ajusta al inicio de la imagen,
        lo detecta automáticamente.
         La propiedad fitXY estira la imagen, funciona mejor fitstart-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tienda" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginEnd="@dimen/derecha"
        android:layout_marginLeft="@dimen/izquierda"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="@dimen/derecha">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="@dimen/ancho"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconDrawable="@drawable/lock"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        app:endIconMode="password_toggle"
        android:layout_marginEnd="@dimen/derecha"
        android:layout_marginRight="@dimen/derecha">

        <!-- La propiedad endIconMode marca hace que aparezca el
        icono de mostrar contraseña al final de la misma, un ojo
        con una barra cruzándolo.
         Se puede cambiar dicho icono con un endIconDrawable e
         introduciéndole el icono que se quiera-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContraseñaUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        style="@style/ButtonStraight"
        android:layout_width="409dp"
        android:layout_height="48dp"
        android:onClick="cambiarventana1"
        android:text="@string/iniciar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/izquierda"
        android:layout_marginLeft="@dimen/izquierda"
        android:layout_marginEnd="@dimen/derecha"
        android:layout_marginTop="32dp"
        android:onClick="regitro"
        android:text="@string/registro"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        android:layout_marginRight="@dimen/derecha" />

</androidx.constraintlayout.widget.ConstraintLayout>